Removed .dockerignore from cloud branch

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ models/complaints_bert/
 models/vector_store/
 src/dashboard/pages/3_Public_Help_Bot.py
 src/dashboard/pages/1_Complaint_Portal.py
+.dockerignore
